# cn

./: .git-blame-ignore-revs  .gitignore  Dockerfile.devcontainer  Dockerfile.redhat  Dockerfile.ubuntu  Makefile  README.md  _CoqProject  cn-coq.opam  cn.opam  dune  dune-project  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: benchmarks.yml  docker.yml  fulminate.yml  general.yml  pr-benchmark.yml  pr-benchmark.yml.disabled  proof.yml  rocq.yml  seq-testing.yml  smt-testing.yml  spec-testing.yml  style.yml
bench/bennet/: benchmark_comparison.py
coq/: dune
coq/CN_Lemmas/: dune
coq/Cerberus/: dune
coq/Cn/: ArgumentTypes.v  BaseTypes.v  MuCore.v  SCtypes.v  Terms.v  dune
coq/Reasoning/: ResourceInference.v  dune
doc/: CN-COQ.md  CONTRIBUTING.md  TESTING.md
lib/: alloc.ml  alloc.mli  argumentTypes.ml  baseTypes.ml  builtins.ml  cLogicalFuns.ml  cStatements.ml  check.ml  checkPredicates.ml  cn_to_coq.ml  cnprog.ml  cnstatement.ml  compile.ml  compile.mli  consistent.ml  context.ml  context.mli  coq_ir.ml  coreTypeChecks.ml  core_to_mucore.ml  definition.ml  definition.mli  diagnostics.ml  dune  eqTable.ml  error_common.ml  executable_spec.ml  executable_spec_internal.ml  explain.ml  explain.mli  global.ml  indexTerms.ml  interval.ml  interval.mli  lemmata.ml  list.ml  locations.ml  locations.mli  logicalArgumentTypes.ml  logicalConstraints.ml  (+38 more)
lib/autoAnnot/: autoAnnot.ml  autoAnnot.mli
lib/autoannot/: autoannot.ml  autoannot.mli
lib/bugExplanation/: bugExplanation.mli  replicators.ml  replicators.mli  shapeAnalyzers.ml  shapeAnalyzers.mli
lib/fulminate/: cn_to_ail.ml  cn_to_ail.mli  config.ml  config.mli  executable_spec_internal.ml  executable_spec_records.ml  executable_spec_utils.ml  extract.ml  extract.mli  fulminate.ml  fulminate.mli  globals.ml  internal.ml  internal.mli  ownership.ml  ownership.mli  ownership_exec.ml  records.ml  source_injection.ml  source_injection.mli  utils.ml  utils.mli
lib/seqTests/: buildScript.ml  buildScript.mli  seqTestGenConfig.ml  seqTestGenConfig.mli  seqTests.ml  seqTests.mli  shrink.ml  types.ml  utils.ml
lib/testGeneration/: buildScript.ml  genBuiltins.ml  genCodeGen.ml  genCodeGen.mli  genCompile.ml  genCompile.mli  genDistribute.ml  genElaboration.ml  genOptimize.ml  genRuntime.ml  genRuntime.mli  genUtils.ml  releases.ml  seqTests.ml  specTests.ml  specTests.mli  test.ml  testGenConfig.ml  testGenConfig.mli  testGeneration.ml  testGeneration.mli
lua_output/: append.cn.lua  append.exec-with-lua-v1.c  append.exec.c  append.exec_with_lua.c  append.lua  append.lua-types.lua  append.lua-wrappers.c  append_with_lua.c  append_with_lua.exec.c  append_with_lua.exec.out  lua_cn_runtime_core.lua  lua_cn_runtime_core_wrappers.c  lua_cn_runtime_core_wrappers.h
lua_output/append/: append.lua  append_with_lua.exec.c
runtime/cn-testing-rs/: Cargo.toml  build.rs  cbindgen.toml
runtime/libcn/: .clang-format  check_compat.cpp
runtime/libcn/include/: cn-testing-macros.h  cn-testing-typedefs.h  dune
runtime/libcn/include/bennet/: alloc.h  compat.h  dsl.h  failure.h  prelude.h  rand.h  size.h  tyche.h  uniform.h  utils.h
runtime/libcn/include/bennet-exp/: alloc.h  arbitrary.h  assert.h  assign.h  backtrack.h  checkpoint.h  compat.h  domain.h  dsl.h  failure.h  optional.h  prelude.h  rand.h  rand_alloc.h  size.h  uniform.h  utils.h
runtime/libcn/include/bennet-exp/dsl/: arbitrary.h  assert.h  assign.h  backtrack.h
runtime/libcn/include/bennet-exp/info/: backtracks.h  sizes.h  unsatisfied.h
runtime/libcn/include/bennet-exp/internals/: domain.h  size.h  uniform.h  urn.h
runtime/libcn/include/bennet-exp/state/: alloc.h  checkpoint.h  failure.h  rand_alloc.h
runtime/libcn/include/bennet-exp/utils/: hash_table.h  optional.h  vector.h
runtime/libcn/include/bennet/dsl/: arbitrary.h  assert.h  assign.h  backtrack.h  specialized.h
runtime/libcn/include/bennet/info/: backtracks.h  discards.h  sizes.h  timing.h  tyche.h  unsatisfied.h
runtime/libcn/include/bennet/internals/: domain.h  fulm_types.h  lazy.h  rand.h  size.h  uniform.h  urn.h
runtime/libcn/include/bennet/internals/domains/: ownership.h  products.h  sized.h  tnum.h  trivial.h  wint.h
runtime/libcn/include/bennet/state/: alloc.h  checkpoint.h  failure.h  rand_alloc.h
runtime/libcn/include/bennet/utils/: hash_table.h  optional.h  string_builder.h  vector.h
runtime/libcn/include/cn-autoannot/: auto_annot.h  focus_ctx.h
runtime/libcn/include/cn-executable/: alloc.h  bump_alloc.h  cerb_types.h  dune  error.h  eval.h  fl_alloc.h  fulminate_alloc.h  gen_cerb_types.c  hash_table.h  prims.h  rmap.h  rts.h  rts_deps.h  stack.h  utils.h
runtime/libcn/include/cn-replicate/: lines.h  prelude.h  shape.h
runtime/libcn/include/cn-smt/: branch_history.h  concretize.h  context.h  datatypes.h  eval.h  from_smt.h  functions.h  gather.h  path_selector.h  prelude.h  records.h  sexp.h  solver.h  structs.h  subst.h  terms.h  to_smt.h  trie.h
runtime/libcn/include/cn-smt/memory/: arena.h  intern.h  std_alloc.h  test_alloc.h
runtime/libcn/include/cn-testing/: dsl.h  failure.h  prelude.h  result.h  size.h  test.h
runtime/libcn/include/cn-testing/memory/: arena.h  test_alloc.h
runtime/libcn/include/fulminate/: api.h  error.h  errors.h  internals.h  rmap.h  stack.h  user.h
runtime/libcn/lib/: c_flags.sexp  compile.sh  dune
runtime/libcn/test/: CMakeLists.txt
runtime/libcn/test/autoannot/: focus.cpp
runtime/libcn/test/bennet/: backtracks_info.cpp  harness.cpp  harness.hpp  ownership_domain.cpp  rand.cpp  tnum.cpp  urn.cpp  wint.cpp
runtime/libcn/test/cn-smt/: ast.cpp  context.cpp  eval.cpp  from_smt.cpp  sexp.cpp  solver.cpp  subst.cpp
tests/: .gitignore  cn-exec-performance-stats.py  diff-prog.py  run-cn-coq.sh  run-cn-exec.sh  run-cn-lemmas.sh  run-cn-seq-test-gen.sh  run-cn-test-gen-smt.sh  run-cn-test-gen.py  run-cn-test-gen.sh  run-cn-vip.sh  run-cn.sh
tests/cn/: alloc_create.c  append.c  byte_int.error.c  (+108 more)
tests/cn-seq-test-gen/: compile_commands.json  run-single-test.sh
tests/cn-test-gen/: Makefile  run-single-test.sh
(+413 files in other folders)
