; With Dune >= 3.11
; (install
;  (files
;   (glob_files
;    (cn-executable/*.h with_prefix runtime/include/cn-executable))
;   (glob_files
;    (cn-testing/*.h with_prefix runtime/include/cn-testing)))
;  (section lib)
;  (package cn))

(install
 (files
  ; Fulminate
  (cn-executable/bump_alloc.h as runtime/include/cn-executable/bump_alloc.h)
  (cn-executable/fulminate_alloc.h
   as
   runtime/include/cn-executable/fulminate_alloc.h)
  (cn-executable/hash_table.h as runtime/include/cn-executable/hash_table.h)
  (cn-executable/utils.h as runtime/include/cn-executable/utils.h)
  (cn-executable/rts_deps.h as runtime/include/cn-executable/rts_deps.h)
  (cn-executable/cerb_types.h as runtime/include/cn-executable/cerb_types.h)
  ; Bennet
  (bennet/alloc.h as runtime/include/bennet/alloc.h)
  (bennet/compat.h as runtime/include/bennet/compat.h)
  (bennet/failure.h as runtime/include/bennet/failure.h)
  (bennet/dsl.h as runtime/include/bennet/dsl.h)
  (bennet/prelude.h as runtime/include/bennet/prelude.h)
  (bennet/rand.h as runtime/include/bennet/rand.h)
  (bennet/size.h as runtime/include/bennet/size.h)
  (bennet/tyche.h as runtime/include/bennet/tyche.h)
  (bennet/uniform.h as runtime/include/bennet/uniform.h)
  (bennet/urn.h as runtime/include/bennet/urn.h)
  ; Bennet - Experimental
  (bennet-exp/compat.h as runtime/include/bennet-exp/compat.h)
  (bennet-exp/prelude.h as runtime/include/bennet-exp/prelude.h)
  (bennet-exp/dsl/arbitrary.h as runtime/include/bennet-exp/dsl/arbitrary.h)
  (bennet-exp/dsl/assert.h as runtime/include/bennet-exp/dsl/assert.h)
  (bennet-exp/dsl/assign.h as runtime/include/bennet-exp/dsl/assign.h)
  (bennet-exp/dsl/backtrack.h as runtime/include/bennet-exp/dsl/backtrack.h)
  (bennet-exp/dsl.h as runtime/include/bennet-exp/dsl.h)
  (bennet-exp/info/backtracks.h
   as
   runtime/include/bennet-exp/info/backtracks.h)
  (bennet-exp/info/sizes.h as runtime/include/bennet-exp/info/sizes.h)
  (bennet-exp/info/tyche.h as runtime/include/bennet-exp/info/tyche.h)
  (bennet-exp/internals/domain.h
   as
   runtime/include/bennet-exp/internals/domain.h)
  (bennet-exp/internals/rand.h
   as
   runtime/include/bennet-exp/internals/rand.h)
  (bennet-exp/internals/size.h
   as
   runtime/include/bennet-exp/internals/size.h)
  (bennet-exp/internals/uniform.h
   as
   runtime/include/bennet-exp/internals/uniform.h)
  (bennet-exp/internals/urn.h as runtime/include/bennet-exp/internals/urn.h)
  (bennet-exp/state/alloc.h as runtime/include/bennet-exp/state/alloc.h)
  (bennet-exp/state/checkpoint.h
   as
   runtime/include/bennet-exp/state/checkpoint.h)
  (bennet-exp/state/failure.h as runtime/include/bennet-exp/state/failure.h)
  (bennet-exp/state/rand_alloc.h
   as
   runtime/include/bennet-exp/state/rand_alloc.h)
  (bennet-exp/utils/hash_table.h
   as
   runtime/include/bennet-exp/utils/hash_table.h)
  (bennet-exp/utils/optional.h
   as
   runtime/include/bennet-exp/utils/optional.h)
  (bennet-exp/utils/vector.h as runtime/include/bennet-exp/utils/vector.h)
  ; CN Testing
  (cn-testing/prelude.h as runtime/include/cn-testing/prelude.h)
  (cn-testing/result.h as runtime/include/cn-testing/result.h)
  (cn-testing/test.h as runtime/include/cn-testing/test.h)
  ; Counterexample program synthesis prototype
  (cn-replicate/shape.h as runtime/include/cn-replicate/shape.h)
  (cn-replicate/lines.h as runtime/include/cn-replicate/lines.h))
 (section lib)
 (package cn))
