; With Dune >= 3.11
; (install
;  (files
;   (glob_files
;    (cn-executable/*.h with_prefix runtime/include/cn-executable))
;   (glob_files
;    (cn-testing/*.h with_prefix runtime/include/cn-testing)))
;  (section lib)
;  (package cn))

(install
 (files
  ; Fulminate
  (cn-executable/bump_alloc.h as runtime/include/cn-executable/bump_alloc.h)
  (cn-executable/fulminate_alloc.h
   as
   runtime/include/cn-executable/fulminate_alloc.h)
  (cn-executable/hash_table.h as runtime/include/cn-executable/hash_table.h)
  (cn-executable/utils.h as runtime/include/cn-executable/utils.h)
  (cn-executable/rts_deps.h as runtime/include/cn-executable/rts_deps.h)
  (cn-executable/cerb_types.h as runtime/include/cn-executable/cerb_types.h)
  ; Bennet
  (bennet/compat.h as runtime/include/bennet/compat.h)
  (bennet/prelude.h as runtime/include/bennet/prelude.h)
  (bennet/dsl/arbitrary.h as runtime/include/bennet/dsl/arbitrary.h)
  (bennet/dsl/assert.h as runtime/include/bennet/dsl/assert.h)
  (bennet/dsl/assign.h as runtime/include/bennet/dsl/assign.h)
  (bennet/dsl/backtrack.h as runtime/include/bennet/dsl/backtrack.h)
  (bennet/dsl.h as runtime/include/bennet/dsl.h)
  (bennet/info/backtracks.h as runtime/include/bennet/info/backtracks.h)
  (bennet/info/unsatisfied.h as runtime/include/bennet/info/unsatisfied.h)
  (bennet/info/sizes.h as runtime/include/bennet/info/sizes.h)
  (bennet/info/tyche.h as runtime/include/bennet/info/tyche.h)
  (bennet/internals/domains/ownership.h
   as
   runtime/include/bennet/internals/domains/ownership.h)
  (bennet/internals/domains/sized.h
   as
   runtime/include/bennet/internals/domains/sized.h)
  (bennet/internals/domains/tnum.h
   as
   runtime/include/bennet/internals/domains/tnum.h)
  (bennet/internals/domains/trivial.h
   as
   runtime/include/bennet/internals/domains/trivial.h)
  (bennet/internals/domains/wint.h
   as
   runtime/include/bennet/internals/domains/wint.h)
  (bennet/internals/domain.h as runtime/include/bennet/internals/domain.h)
  (bennet/internals/rand.h as runtime/include/bennet/internals/rand.h)
  (bennet/internals/size.h as runtime/include/bennet/internals/size.h)
  (bennet/internals/urn.h as runtime/include/bennet/internals/urn.h)
  (bennet/state/alloc.h as runtime/include/bennet/state/alloc.h)
  (bennet/state/checkpoint.h as runtime/include/bennet/state/checkpoint.h)
  (bennet/state/failure.h as runtime/include/bennet/state/failure.h)
  (bennet/state/rand_alloc.h as runtime/include/bennet/state/rand_alloc.h)
  (bennet/utils.h as runtime/include/bennet/utils.h)
  (bennet/utils/hash_table.h as runtime/include/bennet/utils/hash_table.h)
  (bennet/utils/optional.h as runtime/include/bennet/utils/optional.h)
  (bennet/utils/vector.h as runtime/include/bennet/utils/vector.h)
  ; CN Testing
  (cn-testing/prelude.h as runtime/include/cn-testing/prelude.h)
  (cn-testing/result.h as runtime/include/cn-testing/result.h)
  (cn-testing/test.h as runtime/include/cn-testing/test.h)
  ; Counterexample program synthesis prototype
  (cn-replicate/lines.h as runtime/include/cn-replicate/lines.h)
  (cn-replicate/prelude.h as runtime/include/cn-replicate/prelude.h)
  (cn-replicate/shape.h as runtime/include/cn-replicate/shape.h))
 (section lib)
 (package cn))
