(rule
 (target libcn_exec.a)
 (deps
  (:headers
   (glob_files ../include/cn-executable/*.h))
  (:src
   (glob_files ../src/cn-executable/*.c)))
 (action
  (progn
   (run mkdir -p cn-executable)
   (chdir
    cn-executable
    (run ../compile.sh %{src}))
   (run
    ar
    -rcs
    %{target}
    cn-executable/fulminate_alloc.o
    cn-executable/bump_alloc.o
    cn-executable/hash_table.o
    cn-executable/utils.o))))

(rule
 (target libbennet.a)
 (deps
  (:headers
   (glob_files ../include/cn-executable/*.h)
   (glob_files ../include/bennet/*.h))
  (:src
   (glob_files ../src/bennet/*.c)
   (glob_files ../src/bennet/dsl/*.c)
   (glob_files ../src/bennet/internals/*.c)
   (glob_files ../src/bennet/internals/domains/*.c)
   (glob_files ../src/bennet/state/*.c)
   (glob_files ../src/bennet/info/*.c)))
 (action
  (progn
   (run mkdir -p bennet)
   (chdir
    bennet
    (run ../compile.sh %{src}))
   (run
    ar
    -rcs
    %{target}
    bennet/alloc.o
    bennet/arbitrary.o
    bennet/assign.o
    bennet/backtrack.o
    bennet/backtracks.o
    bennet/failure.o
    bennet/ownership.o
    bennet/prelude.o
    bennet/rand.o
    bennet/rand_alloc.o
    bennet/size.o
    bennet/sizes.o
    bennet/sized.o
    bennet/tnum.o
    bennet/trivial.o
    bennet/tyche.o
    bennet/unsatisfied.o
    bennet/urn.o
    bennet/wint.o))))

(rule
 (target libcn_test.a)
 (deps
  (:headers
   (glob_files ../include/cn-executable/*.h)
   (glob_files ../include/cn-testing/*.h))
  (:src
   (glob_files ../src/cn-testing/*.c)))
 (action
  (progn
   (run mkdir -p cn-testing)
   (chdir
    cn-testing
    (run ../compile.sh %{src}))
   (run ar -rcs %{target} cn-testing/test.o))))

(rule
 (target libcn_replica.a)
 (deps
  (:headers
   (glob_files ../include/cn-executable/*.h)
   (glob_files ../include/cn-replicate/*.h))
  (:src
   (glob_files ../src/cn-replicate/*.c)))
 (action
  (progn
   (run mkdir -p cn-replicate)
   (chdir
    cn-replicate
    (run ../compile.sh %{src}))
   (run ar -rcs %{target} cn-replicate/lines.o cn-replicate/shape.o))))

(install
 (files
  (libcn_exec.a as runtime/libcn_exec.a)
  (libbennet.a as runtime/libbennet.a)
  (libcn_test.a as runtime/libcn_test.a)
  (libcn_replica.a as runtime/libcn_replica.a))
 (section lib)
 (package cn))
